--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       <!--Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">National Conference (Hybrid Mode)</h2>
-          <h2 class="animate__animated animate__fadeInDown">on</h2>
+          <h2 class="animate__animated animate__fadeInDown">National Conference (Hybrid Mode)<br>on</h2>
+          <!-- <h2 class="animate__animated animate__fadeInDown">on</h2> -->
           <h2 class="animate__animated animate__fadeInDown">Advances in Marketing Paradigms for Research, Innovation and Technology (AMRIT 2023)</h2>
           <p class="animate__animated animate__fadeInUp">An Initiative of National Institute of Technology Hamirpur<br> Hamirpur, Himachal Pradesh, India <br> (H.P) 177005</p>
           <h2 class="animate__animated animate__fadeInUp"> Date: 17.07.2023 & 18.07.2023</h2>
