--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           <li><a class="nav-link scrollto" href="#pricing">Registration</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
@@ -381,7 +382,7 @@
             <div class="box featured">
               <h3>Ph D. Scholars/Students</h3>
               <h4><sup>Rs</sup>500<span></span></h4>
-            <div class="btn-wrap">
+              <div class="btn-wrap">
                 <a href="https://www.onlinesbi.sbi/sbicollect/" class="btn-buy">Register</a>
               </div>
             </div>
@@ -476,7 +477,6 @@
     </section>
 
 
-   
 
 
     <section id="contact" class="contact">
@@ -524,15 +524,38 @@
 
       </div>
     </section>
-
-
+    <!-- ======= Portfoio Section ======= -->
+    <section id="portfolio" class="portfoio">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h2>Portfoio</h2>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
+            in iste officiis commodi quidem hic quas.</p>
+        </div>
+        <!-- <button class="btn btn-primary" onclick="fetch_events()">Fectch Data</button> -->
+        <div class="row">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-app">App</li>
+              <li data-filter=".filter-card">Card</li>
+              <li data-filter=".filter-web">Web</li>
+            </ul>
+          </div>
+        </div>
+        <div id="latest">
+        </div>
+      </div>
+    </section>
+    <!-- End Portfoio Section -->
   </main>
 
 
   <footer id="footer">
 
 
-     <div class="container">
+    <div class="container">
       <div class="copyright">
         &copy; 2023 All Rights Reserved | National Institute of Technology Hamirpur
       </div>
@@ -546,15 +569,42 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
-
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.slim.js"
+    integrity="sha512-G1QAKkF7DrLYdKiz55LTK3Tlo8Vet2JnjQHuJh+LnU0zimJkMZ7yKZ/+lQ/0m94NC1EisSVS1b35jugu3wLdQg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script>
+    function fetch_events() {
+      fetch("https://raw.githubusercontent.com/suyash-srivastava-dev/testrepo/main/fetchData.json").then(res => res.json())
+        .then(res => {
+          str_body = ""
+          str_body += `<div class="row portfolio-container" >`
+          res.forEach(r => {
+            str_body +=
+              `
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <img src="${r["thumbnailUrl"]}" class="img-fluid" alt="">
+        <div class="portfolio-info">
+          <h4>title</h4>
+          <p>t</p>
+          <a href="${r["url"]}" data-gallery="portfolioGallery"
+            class="portfolio-lightbox preview-link" title="${r["title"]}"><i class="bx bx-plus"></i></a>
+          <a href="${r["url"]}" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+        </div>
+      </div>
+        `
+          });
+          str_body += `</div>`
+          $("#latest").html(str_body)
+        })
+    }
+  </script>
+  <script>fetch_events()</script>
   <script src="assets/js/main.js"></script>
 
 </body>
