--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
           <li><a class="nav-link scrollto" href="#services">Conference</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Registration</a></li>
+          <li><a class="nav-link scrollto" href="#updates">Updates</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
@@ -391,6 +391,18 @@
 
       </div>
     </section>
+    <section id="updates" class="portfoio">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h2>Updates</h2>
+          <p>List of current events</p>
+        </div>
+        <!-- <button class="btn btn-primary" onclick="fetch_events()">Fectch Data</button> -->
+        
+        <div id="latest">
+        </div>
+      </div>
+    </section>
     <section id="team" class="team section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -525,29 +537,7 @@
       </div>
     </section>
     <!-- ======= Portfoio Section ======= -->
-    <section id="portfolio" class="portfoio">
-      <div class="container" data-aos="fade-up">
-        <div class="section-title">
-          <h2>Portfoio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
-        </div>
-        <!-- <button class="btn btn-primary" onclick="fetch_events()">Fectch Data</button> -->
-        <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
-            </ul>
-          </div>
-        </div>
-        <div id="latest">
-        </div>
-      </div>
-    </section>
+   
     <!-- End Portfoio Section -->
   </main>
 
