--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
         <div class="section-title">
             <p>
-              <a href="./members.html"><button class="btn btn-primary align-items-center">More Members</button></a>
+              <!-- <a href="./members.html"><button class="btn btn-primary align-items-center">More Members</button></a> -->
             </p>
         </div>
        
