--- a/index.html
+++ b/index.html
@@ -404,10 +404,8 @@
           <h2>Updates</h2>
           <p>List of current events</p>
         </div>
-        <!-- <button class="btn btn-primary" onclick="fetch_events()">Fectch Data</button> -->
-        
-        <div id="latest">
-        </div>
+        <!-- <div id="latest">
+        </div> -->
       </div>
     </section>
     <section id="team" class="team section-bg">
@@ -507,7 +505,7 @@
         &copy; 2023 All Rights Reserved | National Institute of Technology Hamirpur
       </div>
       <div class="credits">
-        Designed by <a href="https://suyash-srivastava-dev.github.io/portfolio/">Suyash Srivastava (Mtech AI)</a> | <a href="">Subramanyam Sahoo(Mtech AI)</a>
+        Designed by <a href="https://suyash-srivastava-dev.github.io/portfolio/">Suyash Srivastava (Mtech AI)</a> | <a href="https://github.com/SubramanyamSahoo">Subramanyam Sahoo(Mtech AI)</a>
       </div>
     </div>
   </footer>
@@ -565,6 +563,12 @@
                 <h4>${r["name"]}</h4>
                 <span>${r["rank"]}</span>
                 <p>${r["description"]}</p>
+                <div class="social">
+                  <a href=""><i class="ri-twitter-fill"></i></a>
+                  <a href=""><i class="ri-facebook-fill"></i></a>
+                  <a href=""><i class="ri-instagram-fill"></i></a>
+                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                </div>
               </div>
             </div>
           </div>
