--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>Portfolio Details - Anyar Bootstrap Template</title>
+  <title>NITH DoMS National Conference</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -29,13 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Anyar
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/anyar-free-multipurpose-one-page-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -44,12 +36,12 @@
   <div id="topbar" class="fixed-top d-flex align-items-center topbar-inner-pages">
     <div class="container d-flex align-items-center justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@example.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +1 5589 55488 55
+        <i class="bi bi-envelope-fill"></i><a href="mailto:amrit.doms.nith@gmail.com">amrit.doms.nith@gmail.com</a>
+        <i class="bi bi-phone-fill phone-icon"></i> +91 9882875655
       </div>
-      <div class="cta d-none d-md-block">
+      <!-- <div class="cta d-none d-md-block">
         <a href="#about" class="scrollto">Get Started</a>
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -57,41 +49,21 @@
   <header id="header" class="fixed-top d-flex align-items-center header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Anyar</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href=index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="https://nith.ac.in/" class="logo"><img src="https://nith.ac.in/uploads/settings/15795036012617.png"
+        alt="logo" class="img-fluid"></a>
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto active" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
+    <nav id="navbar" class="navbar">
+      <ul>
+        <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
+        <li><a class="nav-link scrollto" href="index.html#about">About Us</a></li>
+        <li><a class="nav-link scrollto" href="index.html#services">Conference</a></li>
+        <li><a class="nav-link scrollto" href="index.html#pricing">Registration</a></li>
+        <li><a class="nav-link scrollto" href="index.html#updates">Updates</a></li>
+        <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
+        <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav>
     </div>
   </header><!-- End Header -->
 
@@ -103,54 +75,45 @@
 
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Portfolio Details</li>
+          <li>Message</li>
         </ol>
-        <h2>Portfolio Details</h2>
+        <h2>Messages</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
-
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-2">
             <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
+              <div class="align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
+                  <img src="assets/img/team/team-1.jpg" alt="">
                 </div>
 
               </div>
-              <div class="swiper-pagination"></div>
+              <!-- <div class="swiper-pagination"></div> -->
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-10">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Prof. (Dr.) RK Dutta</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
+                <li><strong>Organizing Chairman</strong></li>
+                <!-- <li><strong>Client</strong>: ASU Company</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <!-- <h2>Message</h2> -->
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Advances in Marketing Paradigms for Research, Innovation, and Technology is the title of an academic and scholastic event hosted by the Department of Management Studies at the National Institute of Technology Hamirpur (AMRIT-2023). This event aims to demonstrate how management concepts, philosophies, and etiquette have evolved over the past one decade, while technology and innovation have assumed centre stage. Given that management education is central to the majority of business practises in the post-Covid era, there is an urgent need to reevaluate the current curriculum. As a result, AMRIT-2023 aims to provide students, researchers, academics, and practitioners in the fields of management and social science from across the nation with an exceptional opportunity to share their findings regarding the most recent advancements in marketing research, innovation, and technology. AMRIT-2023 will become one of the most anticipated academic conferences among researchers, academics, and practitioners in the field. This event promises to be a turning point in NITH's efforts to foster research excellence, and I eagerly anticipate it. I extend my fondest wishes towards AMRIT-2023.
               </p>
             </div>
           </div>
@@ -159,96 +122,115 @@
 
       </div>
     </section><!-- End Portfolio Details Section -->
+     <!-- ======= Portfolio Details Section ======= -->
+     <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-2">
+            <div class="portfolio-details-slider swiper">
+              <div class="align-items-center">
+
+                <div class="swiper-slide">
+                 
+                  <img src="assets/img/team/team-2.jpg" alt="" height="220" width="200">
+                </div>
+                <br>
+                <div class="swiper-slide">
+                  <img src="assets/img/team/team-3.jpg" alt="" height="220" width="200">
+                </div>
+
+              </div>
+              <!-- <div class="swiper-pagination"></div> -->
+            </div>
+          </div>
+
+          <div class="col-lg-10">
+            <div class="portfolio-info">
+              <h3>Message from Dr. Shampy  and Dr. Adil</h3>
+              <ul>
+                <li><strong>Organizing Secretary</strong></li>
+                <!-- <li><strong>Client</strong>: ASU Company</li>
+                <li><strong>Project date</strong>: 01 March, 2020</li>
+                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
+              </ul>
+            </div>
+            <div class="portfolio-description">
+              <!-- <h2>Message</h2> -->
+             
+              <p>
+                The marketing domain has embraced technology to adapt to the ever-changing dynamics of business. The AMRIT-2023 National Conference will help businesses gain a competitive edge and lead in an ever-changing industry ecosystem. Furthermore, AMRIT-2023 brings together leading experts, practitioners, and academics from the marketing & technology ecosystem - brand agencies, digital marketing, cutting-edge technology, marketers, technology evangelists, and experts, powering the next generation of marketing. We expect that all submissions must be of high quality, rigorous, and novel in their approach from the allied domains of management and technology.We extend our heartfelt thanks to the Patron, Chairman, Dean (FW), NITH and registrar NITH for allowing us to organize AMRIT-2023 with in a such a short span of time. The marketing domain has embraced technology to cope with the ever-changing dynamics of the business. \" Advances in marketing paradigms for research, innovation & technology \" would assist businesses develop their competitive edge and lead in the ever-changing industry ecosystem. Further AMRIT-2023 brings together leading experts, practitioners, and academicians in the marketing & technology ecosystem - brand agencies, digital agencies, new age technology companies, marketers, technology evangelists, experts, and platforms powering the next generation of the Marketing and other allied domains. We expect all submissions to be reach in quality, rigorous and novel in its approach from allied domains of management and technology.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Portfolio Details Section -->
+    <section id="contact" class="contact">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Contact Us</h2>
+        </div>
+
+        <div class="row mt-1 d-flex justify-content-end" data-aos="fade-right" data-aos-delay="100">
+
+          <div class="col-lg-5">
+            <div class="info">
+              <div class="address">
+                <i class="bi bi-geo-alt"></i>
+                <h4>Location: </h4>
+                <p>National Institute of Technology Hamirpur
+                  Hamirpur, Himachal Pradesh, India , 177005</p>
+              </div>
+
+              <div class="email">
+                <i class="bi bi-envelope"></i>
+                <h4>Email:</h4>
+                <p>amrit.doms.nith@gmail.com</p>
+              </div>
+
+              <div class="phone">
+                <i class="bi bi-phone"></i>
+                <h4>Call:</h4>
+                <p>+91 9882875655</p>
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-lg-6 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="100">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3394.2731153459495!2d76.52516391543195!3d31.708433645003556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3904d5487e12c4a1%3A0x395f92d3a202a7d0!2sNational%20Institute%20of%20Technology%2C%20Hamirpur!5e0!3m2!1sen!2sin!4v1681238486451!5m2!1sen!2sin"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-          </div>
-          <div class="col-lg-6">
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
-            <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
-            </p>
-
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Anyar</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-            <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Anyar</span></strong>. All Rights Reserved
+        &copy; 2023 All Rights Reserved | National Institute of Technology Hamirpur
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/anyar-free-multipurpose-one-page-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://suyash-srivastava-dev.github.io/portfolio/">Suyash Srivastava</a> | <a
+          href="https://github.com/SubramanyamSahoo">Subramanyam Sahoo</a>
       </div>
     </div>
-  </footer><!-- End Footer -->
-
+  </footer>
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
