--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         <div class="section-title">
          
           <div class="btn-wrap">
-            <a href="portfolio-details.html" class="btn-buy">Message From Committee</a>
+            <a href="messages.html" class="btn-buy">Message From Committee</a>
           </div>
         </div>
       
