--- a/messages.html
+++ b/messages.html
@@ -102,7 +102,7 @@
 
           <div class="col-lg-10">
             <div class="portfolio-info">
-              <h3>Prof. (Dr.) RK Dutta</h3>
+              <h3>Message from Prof. (Dr.) RK Dutta</h3>
               <ul>
                 <li><strong>Organizing Chairman</strong></li>
                 <!-- <li><strong>Client</strong>: ASU Company</li>
