--- a/messages.html
+++ b/messages.html
@@ -13,7 +13,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -50,20 +52,20 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <a href="https://nith.ac.in/" class="logo"><img src="https://nith.ac.in/uploads/settings/15795036012617.png"
-        alt="logo" class="img-fluid"></a>
+          alt="logo" class="img-fluid"></a>
 
-    <nav id="navbar" class="navbar">
-      <ul>
-        <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
-        <li><a class="nav-link scrollto" href="index.html#about">About Us</a></li>
-        <li><a class="nav-link scrollto" href="index.html#services">Conference</a></li>
-        <li><a class="nav-link scrollto" href="index.html#pricing">Registration</a></li>
-        <li><a class="nav-link scrollto" href="index.html#updates">Updates</a></li>
-        <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
-        <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-      </ul>
-      <i class="bi bi-list mobile-nav-toggle"></i>
-    </nav>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">About Us</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Conference</a></li>
+          <li><a class="nav-link scrollto" href="index.html#pricing">Registration</a></li>
+          <li><a class="nav-link scrollto" href="index.html#updates">Updates</a></li>
+          <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav>
     </div>
   </header><!-- End Header -->
 
@@ -87,20 +89,20 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-2">
-            <div class="portfolio-details-slider swiper">
+          <div class="col-lg-4">
+            <div class="portfolio-details-slider1 swiper">
               <div class="align-items-center">
-
+                <div class="row gy-10">
                 <div class="swiper-slide">
                   <img src="assets/img/team/team-1.jpg" alt="">
                 </div>
-
+              </div>
               </div>
               <!-- <div class="swiper-pagination"></div> -->
             </div>
           </div>
 
-          <div class="col-lg-10">
+          <div class="col-lg-8">
             <div class="portfolio-info">
               <h3>Message from Prof. (Dr.) RK Dutta</h3>
               <ul>
@@ -113,7 +115,18 @@
             <div class="portfolio-description">
               <!-- <h2>Message</h2> -->
               <p>
-                Advances in Marketing Paradigms for Research, Innovation, and Technology is the title of an academic and scholastic event hosted by the Department of Management Studies at the National Institute of Technology Hamirpur (AMRIT-2023). This event aims to demonstrate how management concepts, philosophies, and etiquette have evolved over the past one decade, while technology and innovation have assumed centre stage. Given that management education is central to the majority of business practises in the post-Covid era, there is an urgent need to reevaluate the current curriculum. As a result, AMRIT-2023 aims to provide students, researchers, academics, and practitioners in the fields of management and social science from across the nation with an exceptional opportunity to share their findings regarding the most recent advancements in marketing research, innovation, and technology. AMRIT-2023 will become one of the most anticipated academic conferences among researchers, academics, and practitioners in the field. This event promises to be a turning point in NITH's efforts to foster research excellence, and I eagerly anticipate it. I extend my fondest wishes towards AMRIT-2023.
+                Advances in Marketing Paradigms for Research, Innovation, and Technology is the title of an academic and
+                scholastic event hosted by the Department of Management Studies at the National Institute of Technology
+                Hamirpur (AMRIT-2023). This event aims to demonstrate how management concepts, philosophies, and
+                etiquette have evolved over the past one decade, while technology and innovation have assumed centre
+                stage. Given that management education is central to the majority of business practises in the
+                post-Covid era, there is an urgent need to reevaluate the current curriculum. As a result, AMRIT-2023
+                aims to provide students, researchers, academics, and practitioners in the fields of management and
+                social science from across the nation with an exceptional opportunity to share their findings regarding
+                the most recent advancements in marketing research, innovation, and technology. AMRIT-2023 will become
+                one of the most anticipated academic conferences among researchers, academics, and practitioners in the
+                field. This event promises to be a turning point in NITH's efforts to foster research excellence, and I
+                eagerly anticipate it. I extend my fondest wishes towards AMRIT-2023.
               </p>
             </div>
           </div>
@@ -122,33 +135,32 @@
 
       </div>
     </section><!-- End Portfolio Details Section -->
-     <!-- ======= Portfolio Details Section ======= -->
-     <section id="portfolio-details" class="portfolio-details">
+    <!-- ======= Portfolio Details Section ======= -->
+    <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
         <div class="row gy-4">
 
-          <div class="col-lg-2">
+          <div class="col-lg-4">
             <div class="portfolio-details-slider swiper">
               <div class="align-items-center">
-
-                <div class="swiper-slide">
-                 
-                  <img src="assets/img/team/team-2.jpg" alt="" height="220" width="200">
+                <div class="row gy-10">
+                  <div class="col clients swiper-slide img">
+                    <img src="assets/img/team/team-2.jpg" alt="">
+                  </div>
+                  <br>
+                  <div class="col clients swiper-slide img">
+                    <img src="assets/img/team/team-3.jpg" alt="">
+                  </div>
                 </div>
-                <br>
-                <div class="swiper-slide">
-                  <img src="assets/img/team/team-3.jpg" alt="" height="220" width="200">
-                </div>
-
               </div>
               <!-- <div class="swiper-pagination"></div> -->
             </div>
           </div>
 
-          <div class="col-lg-10">
+          <div class="col-lg-8">
             <div class="portfolio-info">
-              <h3>Message from Dr. Shampy  and Dr. Adil</h3>
+              <h3>Message from Dr. Shampy and Dr. Adil</h3>
               <ul>
                 <li><strong>Organizing Secretary</strong></li>
                 <!-- <li><strong>Client</strong>: ASU Company</li>
@@ -158,9 +170,24 @@
             </div>
             <div class="portfolio-description">
               <!-- <h2>Message</h2> -->
-             
+
               <p>
-                The marketing domain has embraced technology to adapt to the ever-changing dynamics of business. The AMRIT-2023 National Conference will help businesses gain a competitive edge and lead in an ever-changing industry ecosystem. Furthermore, AMRIT-2023 brings together leading experts, practitioners, and academics from the marketing & technology ecosystem - brand agencies, digital marketing, cutting-edge technology, marketers, technology evangelists, and experts, powering the next generation of marketing. We expect that all submissions must be of high quality, rigorous, and novel in their approach from the allied domains of management and technology.We extend our heartfelt thanks to the Patron, Chairman, Dean (FW), NITH and registrar NITH for allowing us to organize AMRIT-2023 with in a such a short span of time. The marketing domain has embraced technology to cope with the ever-changing dynamics of the business. \" Advances in marketing paradigms for research, innovation & technology \" would assist businesses develop their competitive edge and lead in the ever-changing industry ecosystem. Further AMRIT-2023 brings together leading experts, practitioners, and academicians in the marketing & technology ecosystem - brand agencies, digital agencies, new age technology companies, marketers, technology evangelists, experts, and platforms powering the next generation of the Marketing and other allied domains. We expect all submissions to be reach in quality, rigorous and novel in its approach from allied domains of management and technology.
+                The marketing domain has embraced technology to adapt to the ever-changing dynamics of business. The
+                AMRIT-2023 National Conference will help businesses gain a competitive edge and lead in an ever-changing
+                industry ecosystem. Furthermore, AMRIT-2023 brings together leading experts, practitioners, and
+                academics from the marketing & technology ecosystem - brand agencies, digital marketing, cutting-edge
+                technology, marketers, technology evangelists, and experts, powering the next generation of marketing.
+                We expect that all submissions must be of high quality, rigorous, and novel in their approach from the
+                allied domains of management and technology.We extend our heartfelt thanks to the Patron, Chairman, Dean
+                (FW), NITH and registrar NITH for allowing us to organize AMRIT-2023 with in a such a short span of
+                time. The marketing domain has embraced technology to cope with the ever-changing dynamics of the
+                business. \" Advances in marketing paradigms for research, innovation & technology \" would assist
+                businesses develop their competitive edge and lead in the ever-changing industry ecosystem. Further
+                AMRIT-2023 brings together leading experts, practitioners, and academicians in the marketing &
+                technology ecosystem - brand agencies, digital agencies, new age technology companies, marketers,
+                technology evangelists, experts, and platforms powering the next generation of the Marketing and other
+                allied domains. We expect all submissions to be reach in quality, rigorous and novel in its approach
+                from allied domains of management and technology.
               </p>
             </div>
           </div>
@@ -232,7 +259,8 @@
     </div>
   </footer>
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
