--- a/messages.html
+++ b/messages.html
@@ -83,6 +83,44 @@
 
       </div>
     </section><!-- End Breadcrumbs -->
+      <!-- ======= Portfolio Details Section ======= -->
+      <section id="portfolio-details" class="portfolio-details">
+        <div class="container">
+  
+          <div class="row gy-4">
+  
+            <div class="col-lg-4">
+              <div class="portfolio-details-slider1 swiper">
+                <div class="align-items-center">
+                  <div class="row gy-10">
+                  <div class="swiper-slide">
+                    <img src="assets/img/team/dir.jpg" alt="">
+                  </div>
+                </div>
+                </div>
+                <!-- <div class="swiper-pagination"></div> -->
+              </div>
+            </div>
+  
+            <div class="col-lg-8">
+              <div class="portfolio-info">
+                <h3>Message from The Patron</h3>
+                <!-- <ul>
+                  <li><strong>Organizing Chairman</strong></li>
+                </ul> -->
+              </div>
+              <div class="portfolio-description">
+                <!-- <h2>Message</h2> -->
+                <p>
+                  The practice of management has been the subject of extensive scientific research. With the mainstreaming of management research, the channels and structure of products and services have drastically changed. This has resulted in a distinct kind of innovation culture that caters to the widespread notion of 'sustainable growth' that is persistent and highly effective. The AMRIT-2023 places a strong emphasis on interdisciplinary research, which involves cross-disciplinary collaboration to generate insights and innovations. As part of this conference, original research is sought that focuses on a number of topics related to marketing management and other allied fields. This will contribute to the advancement of knowledge and practices in the area of management and social sciences. This conference provides a forum for researchers, scholars, academicians, and practitioners from different parts of the country to present on various issues related to advancements in marketing paradigms and related fields. A major focus of AMRIT-2023 will be to review various approaches and methodologies, and how they can be applied to improve marketing management and other interdisciplinary domains. As I extend my best wishes to the conference's chairman and coordinators, I also hope that the department will continue to organize more events of this nature at a global level in the future.
+                </p>
+              </div>
+            </div>
+  
+          </div>
+  
+        </div>
+      </section><!-- End Portfolio Details Section -->
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
@@ -104,16 +142,9 @@
 
           <div class="col-lg-8">
             <div class="portfolio-info">
-              <h3>Message from Prof. (Dr.) RK Dutta</h3>
-              <ul>
-                <li><strong>Organizing Chairman</strong></li>
-                <!-- <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
-              </ul>
+              <h3>Message from Organizing Chairman</h3>
             </div>
             <div class="portfolio-description">
-              <!-- <h2>Message</h2> -->
               <p>
                 Advances in Marketing Paradigms for Research, Innovation, and Technology is the title of an academic and
                 scholastic event hosted by the Department of Management Studies at the National Institute of Technology
@@ -160,17 +191,9 @@
 
           <div class="col-lg-8">
             <div class="portfolio-info">
-              <h3>Message from Dr. Shampy and Dr. Adil</h3>
-              <ul>
-                <li><strong>Organizing Secretary</strong></li>
-                <!-- <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
-              </ul>
+              <h3>Message from Organizing Secretary</h3>
             </div>
             <div class="portfolio-description">
-              <!-- <h2>Message</h2> -->
-
               <p>
                 The marketing domain has embraced technology to adapt to the ever-changing dynamics of business. The
                 AMRIT-2023 National Conference will help businesses gain a competitive edge and lead in an ever-changing
@@ -195,7 +218,8 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Details Section -->
+    </section>
+    <!-- End Portfolio Details Section -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
