fixes img,message

--- a/messages.html
+++ b/messages.html
@@ -104,7 +104,7 @@
   
             <div class="col-lg-8">
               <div class="portfolio-info">
-                <h3>Message from The Patron</h3>
+                <h4>Message from The Patron</h4>
                 <!-- <ul>
                   <li><strong>Organizing Chairman</strong></li>
                 </ul> -->
@@ -142,7 +142,7 @@
 
           <div class="col-lg-8">
             <div class="portfolio-info">
-              <h3>Message from Organizing Chairman</h3>
+              <h4>Message from Organizing Chairman</h4>
             </div>
             <div class="portfolio-description">
               <p>
@@ -191,7 +191,7 @@
 
           <div class="col-lg-8">
             <div class="portfolio-info">
-              <h3>Message from Organizing Secretary</h3>
+              <h4>Message from Organizing Secretary</h4>
             </div>
             <div class="portfolio-description">
               <p>
@@ -204,7 +204,7 @@
                 allied domains of management and technology.We extend our heartfelt thanks to the Patron, Chairman, Dean
                 (FW), NITH and registrar NITH for allowing us to organize AMRIT-2023 with in a such a short span of
                 time. The marketing domain has embraced technology to cope with the ever-changing dynamics of the
-                business. \" Advances in marketing paradigms for research, innovation & technology \" would assist
+                business. "Advances in marketing paradigms for research, innovation & technology" would assist
                 businesses develop their competitive edge and lead in the ever-changing industry ecosystem. Further
                 AMRIT-2023 brings together leading experts, practitioners, and academicians in the marketing &
                 technology ecosystem - brand agencies, digital agencies, new age technology companies, marketers,
