--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container d-flex align-items-center justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope-fill"></i><a href="mailto:amrit.doms.nith@gmail.com">amrit.doms.nith@gmail.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +91 9882875655 | +91 9991058658
+        <i class="bi bi-phone-fill phone-icon"></i> +91 9882875655
       </div>
     </div>
   </div>
